# transformers_from_scratch

./: Makefile  README.md  pyproject.toml  test_requirements.txt
tests/scratch/: test_smoke.py
