[project]
name = "transformers_from_scratch"
version = "0.0.0"
description = "Implementing attention and transformer-based architectures from scratch for educational purposes"
authors = [
    {name = "Elvijs", email = "<elvijs.sarkans@gmail.com>"}
]
readme = "README.md"
requires-python = ">=3.11"

packages = [
    { include = "scratch", from = "src" },
]

dependencies = [

]


[project.urls]
repository = "https://github.com/elvijs/transformers_from_scratch"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]


[tool.coverage.paths]
source = ["src"]
tests = ["tests"]


[tool.coverage.run]
branch = true
source = ["scratch", "tests"]


[tool.coverage.report]
show_missing = true
fail_under = 100


[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2


[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
